# atlas

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  setup.sh  setup_server.sh  start.sh  tauri.conf.json  webpack.common.js  webpack.config.js
config/: client.env.default  configure-vpn.sh  nginx.conf  server.env.default  weston.ini
config/DEBIAN/: conffiles  control  postinst  prerm  templates
frontend/: .eslintrc.yaml  Cargo.toml  main.js  package-lock.json  package.json  pubspec.yaml  start.sh  tailwind.config.js  tauri.conf.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
frontend/http/: db.js  gamepad.js  index.html  index.js
frontend/lib/: animation_mixin.dart  app.dart  background.dart  button.dart  const.dart  episode.dart  header.dart  home.dart  home_tile.dart  http.dart  input_listener.dart  main.dart  net.dart  (+20 more)
geod/: Cargo.toml  geod.service
gomostreamd/: Cargo.toml
gomostreamd/src/: episodes.rs  main.rs  movies.rs
gomostreamd/src/tmdb/: genres.rs  info.rs  mod.rs
http/: index.html  index.js  index.svelte
migrations/: 20220318030739_init.sql  20230906192842_magnets.sql  alter_system.sql
overlay/: Cargo.toml
overlay/src/: info_worker.rs  input_worker.rs  keepalive_worker.rs  main.rs  mpv_worker.rs  position_worker.rs  styles.css  torrentd_worker.rs
resetd/: resetd.service  resetd.sh
seedbox/: .eslintrc.yaml  package-lock.json  package.json  seedbox.service  start.sh  tsconfig.json
server/: .eslintrc.yaml  .prettierrc  atlas-server.service  package-lock.json  package.json  start.sh  tsconfig.json
services/: couple.sh  frontend.service  frontend.sh  resetd.service  tzupdate.sh  update.sh  weston.service  weston.sh
snap/: snapcraft.yaml
tmdbd/: Cargo.toml  tmdbd.service
torrentd/: .eslintrc.yaml  index.ts  package-lock.json  package.json
update/: update.service  update.sh  update.timer
util/: bootstrap.sh  build_client.sh  bump_version.sh  common.sh  couple.sh  debug.sh  flash.sh  img2qcow.sh  make_image.sh  make_img.sh  make_server_deb.sh  push.sh  push_client.sh  push_server.sh  qcow2img.sh  setup_client.sh  setup_dev_env.sh  setup_server.sh  shrink_img.sh  update_server.sh
wrapper/: wrapper.sh
(+179 files in other folders)
