[package]
name = "gomostreamd"
version = "0.0.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
env_logger = "0.9"
futures = "*"
log = "0.4"
reqwest = { version = "0.11", features = [ "json", "stream" ] }
serde = "1"
serde_json = "*"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
