[package]
name = "atlas-overlay"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.9"
gilrs = "0.9"
gtk = { version = "0.5", package = "gtk4" }
human_bytes = "0.3"
log = "0.4"
relm4 = "0.5"
relm4-components = "0.5"
relm4-macros = "0.5"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
