[package]
name = "atlas-overlay"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.9"
gtk = { version = "0.8", package = "gtk4" }
human_bytes = "0.3"
libc = "0.2"
log = "0.4"
relm4 = "0.8"
relm4-components = "0.8"
relm4-macros = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "charset", "http2", "rustls-tls"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
